Revert "foo" as Vaishnavi's changes in the commit before 2734c7 fixed the overflow.
This reverts commit 2734c7d2947f1fd655317607c102683a542fd5b5.

--- a/hw7/index.css
+++ b/hw7/index.css
@@ -9,14 +9,10 @@
     margin-bottom: 15px;
 }
 
-
-
 #map {
     width: 100%;
-    min-height: 400px;
     max-height: calc(100vh - 150px); /* Adjust 150px as needed to account for other elements on your page */
     height: 100%;
-    margin: 0;
 }
 
 .custom-table {
